--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="movieSearchApp">
 <head>
   <meta charset="UTF-8">
   <title>Movie Search App</title>
+  <base href="/"/>
   <link rel="stylesheet" href="css/main.css">
    <!-- Latest compiled and minified CSS -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -10,15 +11,17 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 </head>
 <body>
+
   <div class="formContainer">
     <h1>Angular OMDb API Search</h1>
       <p>Enter a movie by title.</p>
-      <form>
-        <fieldset>
-          <input ng-model="title" type="text" placeholder="enter a movie title">
-        </fieldset>
-        <button class="btn">Submit<span class="glyphicon glyphicon-arrow-right"></span></button>
-      </form>
+      <input ng-model="title" type="text" placeholder="enter a movie title">
+      <p>
+        <a class="btn" href="{{title}}">Submit</a>
+      </p>
+  </div>
+
+  <div ng-view>
 
   </div>
 
@@ -27,7 +30,9 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/controllers/main_controller.js"></script>
+  <!-- <script type="text/javascript" src="js/controllers/main_controller.js"></script> -->
+  <!-- <script type="text/javascript" src="js/controllers/results_controller.js"></script> -->
 </body>
 </html>
