--- a/partails/results.html
+++ b/partails/results.html
@@ -1,1 +1,5 @@
-<h1>{{output}}</h1>
+<!-- <div ng-repeat="result in results"> -->
+  <!-- <div ng-controller="ResultsController" class="row-fluid"> -->
+    {{output}}
+  <!-- </div> -->
+<!-- </div> -->
