movies showing in list

--- a/partails/results.html
+++ b/partails/results.html
@@ -1,5 +1,6 @@
-<!-- <div ng-repeat="result in results"> -->
-  <!-- <div ng-controller="ResultsController" class="row-fluid"> -->
-    {{output}}
-  <!-- </div> -->
-<!-- </div> -->
+<div ng-repeat="movie in movies">
+  <li>
+    {{movie.title}}
+  </li>
+
+</div>
